ingress_virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
spec:
  hosts:
  - myapp.qwerty.com
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        exact: /myapp
    route:
    - destination:
        port:
          number: 8080
        host: app-service
